# try-actix

./: .env.example  Cargo.toml  README.md
migrations/2023-02-20-041318_create_articles_table/: up.sql
src/: main.rs  models.rs  schema.rs
src/actors/: db.rs
src/db_utils/: mod.rs
